--- a/fieldBy/Auth/Auth.storyboard
+++ b/fieldBy/Auth/Auth.storyboard
@@ -90,11 +90,24 @@
                                 <color key="textColor" name="Black"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="약관에 동의해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PM7-xx-86r">
+                                <rect key="frame" x="20" y="155" width="121" height="18"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
+                                <color key="textColor" name="MainColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wut-2w-nOJ">
                                 <rect key="frame" x="20" y="233" width="374" height="500"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ubp-5R-qmT">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="200"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="cMo-ub-S2z"/>
+                                        </constraints>
+                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yrj-7G-buh">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="74"/>
+                                        <rect key="frame" x="0.0" y="200" width="374" height="74"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wES-51-QbL">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="56"/>
@@ -125,7 +138,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="srG-wQ-rTH">
-                                        <rect key="frame" x="0.0" y="74" width="374" height="56"/>
+                                        <rect key="frame" x="0.0" y="274" width="374" height="56"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="휴대폰 번호 입력" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6da-eC-1e2">
                                                 <rect key="frame" x="16" y="13" width="342" height="30"/>
@@ -144,7 +157,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TZy-zB-Jne">
-                                        <rect key="frame" x="0.0" y="130" width="374" height="370"/>
+                                        <rect key="frame" x="0.0" y="330" width="374" height="170"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                 </subviews>
@@ -186,6 +199,8 @@
                             <constraint firstItem="u3L-s8-VYW" firstAttribute="bottom" secondItem="FuU-rW-wzI" secondAttribute="bottom" id="Q8T-sw-TKX"/>
                             <constraint firstItem="0YB-mu-vWs" firstAttribute="top" secondItem="Vw7-k5-yW9" secondAttribute="top" constant="-6" id="RVh-L3-VLY"/>
                             <constraint firstItem="Qz5-R8-gle" firstAttribute="leading" secondItem="FuU-rW-wzI" secondAttribute="leading" constant="20" id="S6E-zC-lvE"/>
+                            <constraint firstItem="PM7-xx-86r" firstAttribute="leading" secondItem="0YB-mu-vWs" secondAttribute="leading" constant="20" id="V9X-TX-pRi"/>
+                            <constraint firstItem="PM7-xx-86r" firstAttribute="top" secondItem="Qz5-R8-gle" secondAttribute="bottom" constant="5" id="Y3I-Ev-4Tx"/>
                             <constraint firstItem="u3L-s8-VYW" firstAttribute="leading" secondItem="FuU-rW-wzI" secondAttribute="leading" id="aTD-It-ibY"/>
                             <constraint firstItem="oYh-0k-x77" firstAttribute="top" secondItem="Qz5-R8-gle" secondAttribute="bottom" constant="3" id="j2M-3P-XhJ"/>
                             <constraint firstItem="Vw7-k5-yW9" firstAttribute="leading" secondItem="FuU-rW-wzI" secondAttribute="leading" constant="10" id="mlT-O4-pPj"/>
@@ -195,8 +210,12 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="agreeLabel" destination="PM7-xx-86r" id="r6v-zb-ZOM"/>
+                        <outlet property="agreementView" destination="Ubp-5R-qmT" id="cxj-Yw-TTb"/>
+                        <outlet property="backButton" destination="Vw7-k5-yW9" id="dUU-YG-8lc"/>
                         <outlet property="bottomView" destination="u3L-s8-VYW" id="ird-25-20B"/>
                         <outlet property="certificationButton" destination="bnK-iD-hu7" id="Vza-h2-cs5"/>
+                        <outlet property="mainLabel" destination="Qz5-R8-gle" id="6Qj-X0-yuZ"/>
                         <outlet property="nameContainer" destination="wES-51-QbL" id="pDR-Yq-4SA"/>
                         <outlet property="nameTextField" destination="Ta6-PQ-idc" id="8Po-KL-lb6"/>
                         <outlet property="nameView" destination="yrj-7G-buh" id="1ag-iP-E8G"/>
